# 1945AIVProject

./: .gitignore  CMakeLists.txt  README.md
src/Engine/Animation/: animation.c  animation.h
src/Engine/Audio/: audio.c  audio.h
src/Engine/Collision/: collision.c  collision.h
src/Engine/Input/: input.c  input.h
src/Engine/Resources/: assets.c  assets.h
src/Engine/Utils/: utils.c  utils.h
src/GameObjects/Actors/: actor.c  actor.h  enemy.c  enemy.h  player.c  player.h
src/GameObjects/Effects/: explosion.c  explosion.h
src/GameObjects/Projectiles/: bullet.c  bullet.h
src/Program/: main.c
src/Scene/Game/: game.c  game.h
src/Scene/Level/: level.c  level.h
src/Scene/UI/: ui.c  ui.h
tests/: test_animation.c  test_collections.c  test_collision.c
